[package]
name = "author"
version = "0.1.0"
authors = ["JakeSCahill <jake.cahill@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams", branch  = "binary"}
failure = "0.1"
iota-core = { git = "https://github.com/iotaledger/iota.rs", rev = "03cf531" }