[package]
name = "author"
version = "0.1.0"
authors = ["JakeSCahill <jake.cahill@iota.org>", "kwek20 <brord@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
iota-streams = { git = "https://github.com/iotaledger/streams", branch  = "chrysalis-2"}
tokio = { version = "1.5.0", features = ["full"] }